# compiletest-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: common.rs  compiletest.rs  errors.rs  header.rs  json.rs  lib.rs  procsrv.rs  read2.rs  runtest.rs  uidiff.rs  util.rs
test-project/: Cargo.toml
test-project/tests/: tests.rs
test-project/tests/assembly/: panic.rs
test-project/tests/compile-fail/: asm-gated.rs  macro.rs  multiple-errors.rs  mut-suggestion.rs  trait-bounds-cant-coerce.rs  with-own-crate.rs
test-project/tests/nightly/: 2018-edition.rs  some-proc-macro.rs
test-project/tests/nightly/auxiliary/: simple_proc_macro.rs
test-project/tests/pretty/: macro.pp  macro.rs
test-project/tests/run-fail/: args-panic.rs  issue-20971.rs  match-wildcards.rs  mod-zero.rs
test-project/tests/run-pass/: associated-types-binding-in-where-clause.rs  vec-slice-drop.rs  with-own-crate.rs
test-project/tests/ui/: 2018-edition.rs  dyn-keyword.fixed  dyn-keyword.rs  dyn-keyword.stderr
tests/: bless.rs
tests/test_support/: mod.rs
