[package]
name = "compiletest_rs"
version = "0.11.2"
authors = [ "The Rust Project Developers"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          , "Manish Goregaokar <manishsmail@gmail.com>"
          ]
description = "The compiletest utility from the Rust compiler as a standalone testing harness"
license = "MIT OR Apache-2.0" # Same as rustc
repository = "https://github.com/Manishearth/compiletest-rs"
keywords = ["compiletest", "test", "plugin"]
readme = "README.md"
edition = "2021"

[lib]
name = "compiletest_rs"

[dependencies]
diff = "0.1.10"
filetime = "0.2"
getopts = "0.2"
log = "0.4"
regex = "1.0"
rustfix = "0.8"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = { version = "3.0", optional = true }
tester = "0.9"

[target."cfg(unix)".dependencies]
libc = "0.2"

[target."cfg(windows)".dependencies]
miow = "0.6"
windows-sys = { version = "0.59", features = ["Win32"] }

[features]
tmp = ["tempfile"]
rustc = []
stable = [] # Does nothing. Should be removed at next major release
